--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "jest": "^27.4.5",
     "mysql2": "^2.3.3",
     "sequelize": "^7.0.0-alpha.3"
   }
